--- a/index.html
+++ b/index.html
@@ -79,28 +79,29 @@
 	</script>
 </head>
 <body>
-<header>
-	<!-- Fixed navbar -->
-	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="./">Schema Planner</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarCollapse">
-				<ul class="navbar-nav me-auto mb-2 mb-md-0">
-					<li class="nav-item">
-						<!--<a class="nav-link active" aria-current="page" href="./">Home</a>-->
-					</li>
-				</ul>
-				<div class="d-flex" role="search">
-					<a href="https://devshed.io" class="btn btn-outline-success" target="_blank">Signup for DevShed</a>
-				</div>
+<<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+	<div class="container-fluid">
+		<a class="navbar-brand" href="./">DevShed Labs</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarCollapse">
+			<ul class="navbar-nav me-auto mb-2 mb-md-0">
+				<li class="nav-item">
+					<a class="nav-link" aria-current="page" href="../">Open Source</a>
+				</li>
+			</ul>
+			<div class="d-flex" role="search">
+				<a href="https://devshed.io" class="btn btn-outline-success">Signup for DevShed</a>
 			</div>
 		</div>
-	</nav>
-</header>
+	</div>
+</nav>
 <main>
+	<header class="text-center mb-5">
+		<h1 class="display-5 mt-5">Schema Planner</h1>
+	</header>
+
 	<div class="container">
 		<div id="root"></div>
 	</div>
