Make the button more pronounced

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				</li>
 			</ul>
 			<div class="d-flex" role="search">
-				<a href="https://devshed.io" class="btn btn-outline-success">Signup for DevShed</a>
+				<a href="https://devshed.io" class="btn btn-success">Signup for DevShed</a>
 			</div>
 		</div>
 	</div>
